<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="10dp"
        android:background="@drawable/border_radius_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_home2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_arrow_back_24"
            android:tint="@color/black"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_bold"
            android:text="Profile Pengembang"/>
    </LinearLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/my_photo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="140dp"
        android:src="@drawable/my_photo"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:gravity="center"
        android:text="Muhamad Dedi Yusup" />
    <TextView
        android:id="@+id/my_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:gravity="center"
        android:text="muhamad_dediy@stundet.janabadra.ac.id" />

    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/detail" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginEnd="16dp"
                android:text="@string/nim" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/nim_value" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/fakultas" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/fakultas_value" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/prodi" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/prodi_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/angkatan" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/angkatan_val" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_home"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:padding="15dp"
        android:background="#fecf28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:text="Kembali Ke Halaman sebelumnya" />

</LinearLayout>